[workspace]
members = [
    "command",
    "log_user",
    "tokio_user",
    "windows_lib",
]
resolver = "2"

[workspace.metadata.raze]
targets = [
    "aarch64-apple-darwin",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
    "wasm32-unknown-unknown",
    "wasm-wasi",
]
workspace_path = "//remote/per_platform_features/cargo"
gen_workspace_prefix = "per_platform_features"
genmode = "Remote"
default_gen_buildrs = true
experimental_api = true
render_package_aliases = true
